docs/api/qiskit/0.30/qiskit.visualization.pulse_v2.IQXDebugging.md
# IQXDebugging

<span id="undefined" />

`IQXDebugging(**kwargs)`

Bases: `dict`

Pulse stylesheet for pulse programmers. Show details of instructions.

\# TODO: add more generators

*   Generate stepwise waveform envelope with latex pulse names.
*   Generate annotation for waveform height.
*   Apply phase modulation to waveforms.
*   Plot frame change symbol with raw operand values.
*   Show chart name and channel frequency.
*   Show snapshot and barrier.
*   Show acquire channels.
*   Channels are sorted by index and control channels are added to the end.

## Methods

|                                                                                                                                                                                     |                                                                                                                                                                                                                               |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`clear`](qiskit.visualization.pulse_v2.IQXDebugging.clear#qiskit.visualization.pulse_v2.IQXDebugging.clear "qiskit.visualization.pulse_v2.IQXDebugging.clear")                     |                                                                                                                                                                                                                               |
| [`copy`](qiskit.visualization.pulse_v2.IQXDebugging.copy#qiskit.visualization.pulse_v2.IQXDebugging.copy "qiskit.visualization.pulse_v2.IQXDebugging.copy")                         |                                                                                                                                                                                                                               |
| [`fromkeys`](qiskit.visualization.pulse_v2.IQXDebugging.fromkeys#qiskit.visualization.pulse_v2.IQXDebugging.fromkeys "qiskit.visualization.pulse_v2.IQXDebugging.fromkeys")         | Create a new dictionary with keys from iterable and values set to value.                                                                                                                                                      |
| [`get`](qiskit.visualization.pulse_v2.IQXDebugging.get#qiskit.visualization.pulse_v2.IQXDebugging.get "qiskit.visualization.pulse_v2.IQXDebugging.get")                             | Return the value for key if key is in the dictionary, else default.                                                                                                                                                           |
| [`items`](qiskit.visualization.pulse_v2.IQXDebugging.items#qiskit.visualization.pulse_v2.IQXDebugging.items "qiskit.visualization.pulse_v2.IQXDebugging.items")                     |                                                                                                                                                                                                                               |
| [`keys`](qiskit.visualization.pulse_v2.IQXDebugging.keys#qiskit.visualization.pulse_v2.IQXDebugging.keys "qiskit.visualization.pulse_v2.IQXDebugging.keys")                         |                                                                                                                                                                                                                               |
| [`pop`](qiskit.visualization.pulse_v2.IQXDebugging.pop#qiskit.visualization.pulse_v2.IQXDebugging.pop "qiskit.visualization.pulse_v2.IQXDebugging.pop")                             | If key is not found, d is returned if given, otherwise KeyError is raised                                                                                                                                                     |
| [`popitem`](qiskit.visualization.pulse_v2.IQXDebugging.popitem#qiskit.visualization.pulse_v2.IQXDebugging.popitem "qiskit.visualization.pulse_v2.IQXDebugging.popitem")             | 2-tuple; but raise KeyError if D is empty.                                                                                                                                                                                    |
| [`setdefault`](qiskit.visualization.pulse_v2.IQXDebugging.setdefault#qiskit.visualization.pulse_v2.IQXDebugging.setdefault "qiskit.visualization.pulse_v2.IQXDebugging.setdefault") | Insert key with a value of default if key is not in the dictionary.                                                                                                                                                           |
| [`update`](qiskit.visualization.pulse_v2.IQXDebugging.update#qiskit.visualization.pulse_v2.IQXDebugging.update "qiskit.visualization.pulse_v2.IQXDebugging.update")                 | If E is present and has a .keys() method, then does: for k in E: D\[k] = E\[k] If E is present and lacks a .keys() method, then does: for k, v in E: D\[k] = v In either case, this is followed by: for k in F: D\[k] = F\[k] |
| [`values`](qiskit.visualization.pulse_v2.IQXDebugging.values#qiskit.visualization.pulse_v2.IQXDebugging.values "qiskit.visualization.pulse_v2.IQXDebugging.values")                 |                                                                                                                                                                                                                               |
